# selma

./: README.md  package-lock.json  package.json
public/: index.html
src/: App.js  Editor.js  Help.js  HotkeyHandler.js  Menu.js  Preview.js  Settings.js  Workbench.js  config.js  configureEditor.js  helpText.js  index.js  introGuide.js  oldApp.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/styles/: App.css  Help.css  Menu.css  Preview.css  Settings.css  Workbench.css  index.css
